Fix width of loading sidebar to avoid layout jump
This broke when refactoring with CSS custom props that are not available
on this element. This resulted in 0 width for the loading sidebar and a
layout jump when it was done loading.

Changelog: fixed

--- a/app/assets/stylesheets/framework/application-chrome.scss
+++ b/app/assets/stylesheets/framework/application-chrome.scss
@@ -152,11 +152,11 @@
       top: 0;
 
       &:not(.super-sidebar-is-icon-only) {
-        width: calc(#{$super-sidebar-width} - var(--ai-panels-gap));
+        width: calc(#{$super-sidebar-width} - var(--gl-spacing-scale-3));
       }
 
       &.super-sidebar-is-icon-only {
-        width: var(--ai-navigation-rail-size-with-gap);
+        width: calc(#{$gl-button-medium-size} + var(--gl-spacing-scale-3));
       }
     }
 
